--- a/src/app/applications/datatarget/opendatadk/opendatadk-detail/opendatadk-detail.component.html
+++ b/src/app/applications/datatarget/opendatadk/opendatadk-detail/opendatadk-detail.component.html
@@ -1,39 +1,39 @@
-<h4>{{ 'OPENDATADK.DETAILS.NAME' | translate }}</h4>
-<div>
+<p>
+    <strong>{{ 'OPENDATADK.DETAILS.NAME' | translate }}</strong>
     {{openDataDkDataset.name}}
-</div>
+</p>
 
-<h4>{{ 'OPENDATADK.DETAILS.RESOURCETITLE' | translate }}</h4>
-<div>
+<p>
+    <strong>{{ 'OPENDATADK.DETAILS.RESOURCETITLE' | translate }}</strong>
     {{openDataDkDataset.resourceTitle ? openDataDkDataset.resourceTitle : ('OPENDATADK.DETAILS.NA' | translate)}}
-</div>
+</p>
 
-<h4>{{ 'OPENDATADK.DETAILS.DESCRIPTION' | translate }}</h4>
-<div>
+<p>
+    <strong>{{ 'OPENDATADK.DETAILS.DESCRIPTION' | translate }}</strong>
     {{openDataDkDataset.description ? openDataDkDataset.description : ('OPENDATADK.DETAILS.NA' | translate) }}
-</div>
+</p>
 
-<h4>{{ 'OPENDATADK.DETAILS.KEYWORDS' | translate }}</h4>
-<div>
+<p>
+    <strong>{{ 'OPENDATADK.DETAILS.KEYWORDS' | translate }}</strong>
     {{openDataDkDataset.keywords ? openDataDkDataset.keywords : ('OPENDATADK.DETAILS.NA' | translate) }}
-</div>
+</p>
 
-<h4>{{ 'OPENDATADK.DETAILS.LICENSE' | translate }}</h4>
-<div>
+<p>
+    <strong>{{ 'OPENDATADK.DETAILS.LICENSE' | translate }}</strong>
     {{openDataDkDataset.license}}
-</div>
+</p>
 
-<h4>{{ 'OPENDATADK.DETAILS.AUTHORNAME' | translate }}</h4>
-<div>
+<p>
+    <strong>{{ 'OPENDATADK.DETAILS.AUTHORNAME' | translate }}</strong>
     {{openDataDkDataset.authorName}}
-</div>
+</p>
 
-<h4>{{ 'OPENDATADK.DETAILS.AUTHOREMAIL' | translate }}</h4>
-<div>
+<p>
+    <strong>{{ 'OPENDATADK.DETAILS.AUTHOREMAIL' | translate }}</strong>
     {{openDataDkDataset.authorEmail}}
-</div>
+</p>
 
-<h4>{{ 'OPENDATADK.DETAILS.URL' | translate }}</h4>
-<div>
+<p>
+    <strong>{{ 'OPENDATADK.DETAILS.URL' | translate }}</strong>
     {{openDataDkDataset.url}}
-</div>
+</p>
