--- a/src/assets/scss/elements/_icons.scss
+++ b/src/assets/scss/elements/_icons.scss
@@ -3,7 +3,7 @@
 
 .icon {
   &--primary {
-    font-size: $icon-size-big;
+    font-size: $icon-size-medium;
     color: $color-Icons-alternative;
   }
 
